pm2 fixes
